--- a/src/components/TodoHome/index.css
+++ b/src/components/TodoHome/index.css
@@ -2,6 +2,69 @@
     margin: 0;
 }
 
+/*  ************************* MOBILE DEVICE VIEW *********************************************************************************  */
+.bg-todo-home-container{
+    min-height:100vh;
+    background-image: url("https://res.cloudinary.com/dnh9hnjbx/image/upload/v1751522766/todo_lists_desktop_wallpaper.jpg");
+    background-size:cover;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    padding:10px;
+
+}
+.todo-home-content-container{
+    width:90%;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    margin-top:20px;
+    margin-bottom:40px;
+    text-align:center;
+}
+.todo-home-image{
+    width:80%;
+}
+.todo-home-header{
+    font-family:system-ui,Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size:20px;
+    color:#0a2d5a;
+    margin:0;
+
+}
+.todo-home-discription{
+    width:95%;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size:14px;
+    color:#020424;
+}
+.todo-home-note{
+    font-size:12px;
+     color:rgb(18, 8, 75);
+}
+.todo-home-start-button{
+    height:40px;
+    width:120px;
+    background-color:#1387fb;
+    border:none;
+    border-radius:5px;
+    outline:none;
+    cursor: pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:16px;
+    font-weight:520;
+    margin-top:20px;
+    transition: background-color 0.3 ease;
+}
+.todo-home-start-button:hover{
+    background-color:#036ed8;
+}
+
+/*  ************************* MEDIUM/LARGE DEVICE VIEW *********************************************************************************  */
+@media screen and (min-width:760px) {
 .bg-todo-home-container{
     min-height:100vh;
     background-image: url("https://res.cloudinary.com/dnh9hnjbx/image/upload/v1751522766/todo_lists_desktop_wallpaper.jpg");
@@ -39,6 +102,10 @@
     font-size:17px;
     color:#020424;
 }
+.todo-home-note{
+    font-size:14px;
+    color:rgb(18, 8, 75);
+}
 .todo-home-start-button{
     height:45px;
     width:125px;
@@ -53,4 +120,6 @@
     font-weight:500;
     margin-top:20px;
     padding:10px;
+}
+  
 }
