--- a/src/components/TodoListItems/index.css
+++ b/src/components/TodoListItems/index.css
@@ -1,4 +1,77 @@
+/* ***********************  MOBILE DEVICES  ************************************************************** */
 .todo-list-items-container{
+    width:100%;
+    display:flex;
+    flex-direction:row;
+    justify-content: flex-start;
+    align-items:center;
+    padding:0;
+    margin:0;
+    margin-bottom:10px;
+}
+.todo-checkbox-input{
+    list-style-type:none;
+    height:18px;
+    width:18px;
+    margin:0;
+    cursor: pointer;
+}
+.todo-list-item-text-container{
+    height:40px;
+    width:95%;
+    background-color: #b8dfed;
+    border-color:#07057c;
+    border-style:solid;
+    border-width:8px;
+    border-top:none;
+    border-bottom:none;
+    border-right:none;
+    border-radius:4px;
+    margin-left:10px;
+    padding-top:4px;
+    padding-bottom:5px;
+    padding-left:10px;
+    padding-right:10px;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-between;
+    align-items: center;
+}
+.todo-text-label{
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size:14px;
+    color: #28075a;
+    margin-left:10px;
+    cursor: pointer;
+}
+.todo-text-label-checked{
+    text-decoration:line-through;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size:16px;
+    color: #0e031e;
+    margin-left:10px;
+    cursor: pointer;
+}
+/* delete todo button */
+.todo-item-delete-btn{
+    height:26px;
+    width:26px;
+    background-color:transparent;
+    border:none;
+    cursor:pointer;
+}
+.todo-item-delete-icon{
+    height:18px;
+    width:18px;
+}
+
+
+
+
+
+/* ***********************  MEDIUM/LARGE DEVICES  ************************************************************** */
+@media  sceeen and (min-width:760px) {
+    .todo-list-items-container{
     width:100%;
     display:flex;
     flex-direction:row;
@@ -61,4 +134,6 @@
 .todo-item-delete-icon{
     height:20px;
     width:20px;
+}
+
 }
