--- a/src/components/TodosList/index.css
+++ b/src/components/TodosList/index.css
@@ -2,6 +2,126 @@
     margin:0;
 }
 
+/*  ************************* MOBILE DEVICE VIEW *********************************************************************************  */
+.todos-list-bg-container{
+    min-height:100vh;
+    background-image:linear-gradient(to top,#e0e4f9,#f3fdfd);
+    width:100%;
+    display:flex;
+    flex-direction:column;
+    justify-content:flex-start;
+    align-items:center;
+    padding:10px;
+}
+.todos-list-heading{
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 32px;
+    color:#022037;
+}
+.todos-list-content-container{
+    width:90%;
+    display:flex;
+    flex-direction:column;
+    justify-content:flex-start;
+    align-items:flex-start;
+    margin-top:10px;
+    margin-bottom:15px;
+}
+
+.todo-create-heading{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size:22px;
+    color:#012540;
+    font-weight:300;
+}
+.todo-create-span{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size:28px;
+    color:#03406f;
+    font-weight:bold;
+}
+.todo-input-element{
+    height:50px;
+    width:90%;
+    padding-left:15px;
+    padding-right:5px;
+    border:1px solid #b5bfc2;
+    border-radius:5px;
+    margin-top:4px;
+    outline:none;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size:15px;
+    color:#0d082e;
+
+}
+/* ADD button */
+.todo-add-task-button{
+    height:35px;
+    width:80px;
+    border:none;
+    border-radius:4px;
+    background-color: #1a38a7;
+    margin-top:10px;
+    color:#ffffff;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:15px;
+    cursor: pointer;
+    transition:background-color 0.3 ease;
+}
+.todo-add-task-button:hover{
+    background-color: #02165c;
+}
+
+
+/* <<<<<<<<<<<<<< MY TASKS   */
+.todo-my-task-heading{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size:22px;
+    color:#033255;
+    font-weight:300;
+    margin-top:50px;
+}
+.todo-my-task-span{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size:28px;
+    color:#033255;
+    font-weight:bold;
+}
+.emply-todos-note{
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:10px;
+}
+.todos-ul-list-container{
+    width:100%;
+    display:flex;
+    flex-direction:column;
+    justify-content:flex-start;
+    align-items:flex-start;
+    padding:0;
+    margin:0;
+    margin-top:5px;
+}
+.todo-task-save-button{
+    height:35px;
+    width:80px;
+    border:none;
+    border-radius:4px;
+    background-color: #16339a;
+    margin-top:10px;
+    color:#ffffff;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:15px;
+    cursor: pointer;
+    transition:background-color 0.3 ease;
+}
+.todo-task-save-button:hover{
+    background-color: #02165c;
+}
+
+
+/*  ************************* MEDIUM/LARGE DEVICE VIEW *********************************************************************************  */
+@media  screen and (min-width:760px) {
+    
 .todos-list-bg-container{
     min-height:100vh;
     background-image:linear-gradient(to top,#e0e4f9,#f3fdfd);
@@ -56,11 +176,11 @@
 
 }
 .todo-add-task-button{
-    height:42px;
+    height:45px;
     width:90px;
     border:none;
     border-radius:4px;
-    background-color: #16339a;
+    background-color: #1c389e;
     margin-top:15px;
     color:#ffffff;
     font-family:Arial, Helvetica, sans-serif;
@@ -83,6 +203,10 @@
     color:#033255;
     font-weight:bold;
 }
+.emply-todos-note{
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:12px;
+}
 .todos-ul-list-container{
     width:100%;
     display:flex;
@@ -91,14 +215,14 @@
     align-items:flex-start;
     padding:0;
     margin:0;
-    margin-top:15px;
+    margin-top:10px;
 }
 .todo-task-save-button{
-    height:42px;
+    height:45px;
     width:90px;
     border:none;
     border-radius:4px;
-    background-color: #16339a;
+    background-color: #213ea7;
     margin-top:10px;
     color:#ffffff;
     font-family:Arial, Helvetica, sans-serif;
@@ -118,4 +242,5 @@
     cursor: pointer;
     opacity:15%;
 
+}
 }
