--- a/src/components/TodoHome/index.css
+++ b/src/components/TodoHome/index.css
@@ -5,7 +5,7 @@
 /*  ************************* MOBILE DEVICE VIEW *********************************************************************************  */
 .bg-todo-home-container{
     min-height:100vh;
-    background-image: url("https://res.cloudinary.com/dnh9hnjbx/image/upload/v1751522766/todo_lists_desktop_wallpaper.jpg");
+    background:linear-gradient(to top, #dce2e3, #bfe4e4);
     background-size:cover;
     display:flex;
     flex-direction:column;
@@ -14,21 +14,25 @@
     padding:10px;
 
 }
+/* We have content in this container */
 .todo-home-content-container{
     width:90%;
     display:flex;
     flex-direction:column;
     justify-content:center;
     align-items:center;
-    margin-top:20px;
+    margin-top:10px;
     margin-bottom:40px;
     text-align:center;
+
 }
+
+/* home image represents the todos */
 .todo-home-image{
     width:80%;
 }
 .todo-home-header{
-    font-family:system-ui,Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:Roboto;
     font-size:20px;
     color:#0a2d5a;
     margin:0;
@@ -36,38 +40,74 @@
 }
 .todo-home-discription{
     width:95%;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size:14px;
-    color:#020424;
+    font-family: Roboto;
+    font-size:12px;
+    color:#0a2f52;
+    line-height:1.6;
 }
+/* Note container for instuctions */
+.todo-home-note-card{
+    border:0px solid;
+    border-radius:4px;
+    background-color:#64aaea;
+    display:flex;
+    justify-content:flex-start;
+    align-items:flex-start;
+    padding:10px;
+} 
+.note-checkbox{
+    height:14px;
+    width:14px;
+    margin-right:10px;
+    outline:none;
+}
+
+/* Note for instuctions */
 .todo-home-note{
     font-size:12px;
-     color:rgb(18, 8, 75);
+    color:rgb(251, 251, 252);
+    margin:0;
 }
+
 .todo-home-start-button{
     height:40px;
     width:120px;
-    background-color:#1387fb;
+    background-color: #1b3287;
     border:none;
     border-radius:5px;
     outline:none;
     cursor: pointer;
     color:#ffffff;
     font-family:Arial;
-    font-size:16px;
+    font: size 16px;
     font-weight:520;
     margin-top:20px;
-    transition: background-color 0.3 ease;
+    transition:background-color 0.3 ease;
 }
 .todo-home-start-button:hover{
-    background-color:#036ed8;
+    background-color:#080d54;
+}
+.todo-home-start-button-disable{
+    height:40px;
+    width:120px;
+    background-color: #1b3287;
+    border:none;
+    border-radius:5px;
+    outline:none;
+    color:#ffffff;
+    font-family:Arial;
+    font: size 16px;
+    font-weight:520;
+    margin-top:20px;
+    transition:background-color 0.3 ease;
+    opacity:20%; 
 }
 
 /*  ************************* MEDIUM/LARGE DEVICE VIEW *********************************************************************************  */
-@media screen and (min-width:760px) {
+@media screen and (min-width:768px) {
 .bg-todo-home-container{
     min-height:100vh;
-    background-image: url("https://res.cloudinary.com/dnh9hnjbx/image/upload/v1751522766/todo_lists_desktop_wallpaper.jpg");
+    background:linear-gradient(to top, #dce2e3, #bfe4e4);
     background-size:cover;
     display:flex;
     flex-direction:column;
@@ -82,44 +122,80 @@
     flex-direction:column;
     justify-content:center;
     align-items:center;
-    margin-top:20px;
+    margin-top:10px;
     margin-bottom:40px;
     text-align:center;
 }
 .todo-home-image{
     width:40%;
+    margin-top:-50px;
 }
 .todo-home-header{
-    font-family:system-ui,Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size:30px;
+    font-family:Roboto;
+    font-size:32px;
     color:#0a2d5a;
     margin:0;
 
 }
 .todo-home-discription{
-    width:82%;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size:17px;
-    color:#020424;
+    width:80%;
+    font-family:Roboto;
+    font-size:16px;
+    color:#0a2f52;
+    line-height:1.6;
+}
+/* Note container for instuctions */
+.todo-home-note-card{
+    border:0px solid;
+    border-radius:4px;
+    background-color:#9bc3e8;
+    padding-left: 10px;
+    padding-right:10px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    margin-top:10px;
+    padding:10px;
+}
+.note-checkbox{
+    height:16px;
+    width:16px;
+    margin-right:10px;
 }
 .todo-home-note{
     font-size:14px;
-    color:rgb(18, 8, 75);
+    color:#090f37;
 }
+
+/* start button */
 .todo-home-start-button{
     height:45px;
     width:125px;
-    background-color:#1387fb;
+    background-color: #1b3287;
     border:none;
     border-radius:5px;
     outline:none;
     cursor: pointer;
     color:#ffffff;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size:16px;
+    font-family:Roboto;
+    font-size:18px;
     font-weight:500;
     margin-top:20px;
-    padding:10px;
 }
-  
+.todo-home-start-button-disable{
+    height:45px;
+    width:125px;
+    background-color: #1b3287;
+    border:none;
+    border-radius:5px;
+    outline:none;
+    color:#ffffff;
+    font-family:Roboto;
+    font-size:18px;
+    font-weight:500;
+    margin-top:20px;
+    opacity:40%;
+}
+
+
 }
