--- a/src/components/TodosList/index.css
+++ b/src/components/TodosList/index.css
@@ -3,6 +3,7 @@
 }
 
 /*  ************************* MOBILE DEVICE VIEW *********************************************************************************  */
+/* main bg container */
 .todos-list-bg-container{
     min-height:100vh;
     background-image:linear-gradient(to top,#e0e4f9,#f3fdfd);
@@ -18,6 +19,8 @@
     font-size: 32px;
     color:#022037;
 }
+
+/* content have in this container */
 .todos-list-content-container{
     width:90%;
     display:flex;
@@ -40,6 +43,8 @@
     color:#03406f;
     font-weight:bold;
 }
+
+/* input Element to catching a inputs from users */
 .todo-input-element{
     height:50px;
     width:90%;
@@ -60,7 +65,7 @@
     width:80px;
     border:none;
     border-radius:4px;
-    background-color: #1a38a7;
+    background-color: #213ea7;
     margin-top:10px;
     color:#ffffff;
     font-family:Arial, Helvetica, sans-serif;
@@ -91,6 +96,8 @@
     font-family:Arial, Helvetica, sans-serif;
     font-size:10px;
 }
+
+/* unorder list for todos */
 .todos-ul-list-container{
     width:100%;
     display:flex;
@@ -101,26 +108,43 @@
     margin:0;
     margin-top:5px;
 }
+
+/* todo save button */
 .todo-task-save-button{
     height:35px;
     width:80px;
     border:none;
     border-radius:4px;
-    background-color: #16339a;
+    background-color: #213ea7;
     margin-top:10px;
     color:#ffffff;
     font-family:Arial, Helvetica, sans-serif;
     font-size:15px;
     cursor: pointer;
-    transition:background-color 0.3 ease;
+    transition:background-color box-shadow 0.3 ease;
 }
 .todo-task-save-button:hover{
     background-color: #02165c;
+}
+.back-to-home-button{
+    margin-left: auto;
+    background-color:transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+}
+.home-icon{
+    height:16px;
+    width:16px;
+}
+.home-icon:hover{
+    color:rgb(15, 31, 145);
 }
 
 
 /*  ************************* MEDIUM/LARGE DEVICE VIEW *********************************************************************************  */
 @media screen and (min-width:760px) {
+/* main bg container */
 .todos-list-bg-container{
     min-height:100vh;
     background-image:linear-gradient(to top,#e0e4f9,#f3fdfd);
@@ -133,9 +157,10 @@
 }
 .todos-list-heading{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 35px;
+    font-size:38px;
     color:#022037;
 }
+/* content have in this container */
 .todos-list-content-container{
     width:80%;
     display:flex;
@@ -174,12 +199,13 @@
     color:#0d082e;
 
 }
+/*  add button */
 .todo-add-task-button{
     height:45px;
     width:90px;
     border:none;
     border-radius:4px;
-    background-color: #1c389e;
+    background-color: #213ea7;
     margin-top:15px;
     color:#ffffff;
     font-family:Arial, Helvetica, sans-serif;
@@ -216,6 +242,7 @@
     margin:0;
     margin-top:10px;
 }
+/* todo save button */
 .todo-task-save-button{
     height:45px;
     width:90px;
@@ -228,6 +255,7 @@
     font-size:20px;
     cursor: pointer;
 }
+/* we have no todos: saving not able button style*/
 .todo-task-save-dis-button{
     height:42px;
     width:90px;
@@ -241,5 +269,17 @@
     cursor: pointer;
     opacity:15%;
 
+}
+/* back home button styling*/
+.back-to-home-button{
+    margin-left: auto;
+    background-color:transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+}
+.home-icon{
+    height:22px;
+    width:22px;
 }
 }
